Added ties category/added functionalitchanging position/removed briefcase category/changed setting camera width for different screen resolutions

--- a/KinectFittingRoom/KinectFittingRoom/Properties/Resources.resx
+++ b/KinectFittingRoom/KinectFittingRoom/Properties/Resources.resx
@@ -118,24 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="big_skirt_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\big_skirt_green.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="big_skirt_green1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\big_skirt_green.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="big_skirt_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\big_skirt_red.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="big_skirt_red1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\big_skirt_red.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="big_skirt_waves" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\big_skirt_waves.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="big_skirt_waves1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\big_skirt_waves.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="breezy_skirt_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\breezy_skirt_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -144,12 +126,6 @@
   </data>
   <data name="breezy_skirt_winter" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\breezy_skirt_winter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="briefcase" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\images\bags\briefcase.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="briefcase_symbol" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\icons\categories\briefcase_symbol.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ButtonClick" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\buttonclick.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -163,24 +139,6 @@
   <data name="cowboy_hat" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\hats\cowboy_hat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cowboy_hat1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\cowboy_hat.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="cowboy_hat2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\cowboy_hat.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="cowboy_hat_gray" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\cowboy_hat_gray.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="cowboy_hat_gray1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\cowboy_hat_gray.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="cowboy_hat_straw" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\cowboy_hat_straw.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="cowboy_hat_straw1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\cowboy_hat_straw.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="cowboy_straw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\hats\cowboy_straw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -190,47 +148,11 @@
   <data name="dress_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\dresses\dress_dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dress_dark1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\dresses\dress_dark.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="dress_dark2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\dresses\dress_dark.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="dress_orange_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\dresses\dress_orange_black.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="dress_orange_black1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\dresses\dress_orange_black.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="dress_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\dresses\dress_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dress_red1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\dresses\dress_red.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="dress_red2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\dresses\dress_red.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="dress_symbol" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons\categories\dress_symbol.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="fedora_brown_hat" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\fedora_brown_hat.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="fedora_brown_hat1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\fedora_brown_hat.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="fedora_darkgreen_hat" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\fedora_darkgreen_hat.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="fedora_darkgreen_hat1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\fedora_darkgreen_hat.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="fedora_hat" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\fedora_hat.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="fedora_hat1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\hats\fedora_hat.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="fedora_hat_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\hats\fedora_hat_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -259,32 +181,11 @@
   <data name="long_skirt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\long_skirt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="long_skirt1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\long_skirt.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="long_skirt_bikes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\long_skirt_bikes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="long_skirt_bikes1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\long_skirt_bikes.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="long_skirt_bikes2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\long_skirt_bikes.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="long_skirt_indian" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\long_skirt_indian.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="long_skirt_indian1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\long_skirt_indian.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="long_skirt_indian2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\long_skirt_indian.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="long_skirt_violet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\long_skirt_violet.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="long_skirt_violet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\long_skirt_violet.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="menu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons\menu\menu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -316,47 +217,17 @@
   <data name="short_skirt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\short_skirt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="short_skirt1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="short_skirt2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="short_skirt_checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\short_skirt_checked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="short_skirt_checked1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt_checked.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="short_skirt_checked2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt_checked.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="short_skirt_denim" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\short_skirt_denim.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="short_skirt_denim1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt_denim.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="short_skirt_denim2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt_denim.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="short_skirt_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\short_skirt_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="short_skirt_green_stripes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt_green_stripes.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="short_skirt_green_stripes1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt_green_stripes.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="short_skirt_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\short_skirt_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="short_skirt_red1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt_red.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="short_skirt_red2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\skirts\short_skirt_red.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="skirt_symbol" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons\categories\skirt_symbol.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -411,5 +282,35 @@
   </data>
   <data name="dress_violet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\dresses\dress_violet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="move_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\menu\move_down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="move_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\menu\move_up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="arrows_up_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\menu\arrows_up_down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tie_beige" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\ties\tie_beige.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tie_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\ties\tie_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tie_gray" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\ties\tie_gray.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tie_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\ties\tie_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tie_symbol" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icons\categories\tie_symbol.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tie_color" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\ties\tie_color.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tie_stripes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\ties\tie_stripes.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
