--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 ~ zmienic sposób odtwarzania dŸwiêku przy robieniu zdjêcia
 ~ czy zmieniæ ustalanie szerokoœci kamery?
 ~ wykonaæ TODO z warningów
+~ wszystkie b³êdy jêzykowe w pracy!
 
 
 ~ KinectService: tam da³am bazow¹ szerokoœæ ekranu 1366 i w linijce 458 dziele przez t¹ wartoœæ (robie to dlatego ¿e ustalona jest szerokoœæ kamery = 1. ale dla ekranów o innej rozdzielczoœci szerokoœæ kamery, mimo ¿e =1, to obiekty nie s¹ juz tej samej wielkoœci)
